RESOLVED FIXED308640
[LBSE] Fix marker-element-added.html
https://bugs.webkit.org/show_bug.cgi?id=308640
Summary [LBSE] Fix marker-element-added.html
Rob Buis
Reported 2026-02-25 06:29:25 PST
Fix marker-element-added.html.
Attachments
Rob Buis
Comment 1 2026-02-25 06:34:56 PST
EWS
Comment 2 2026-03-02 03:20:09 PST
Committed 308449@main (aace11ea10c9): <https://commits.webkit.org/308449@main> Reviewed commits have been landed. Closing PR #59418 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-02 03:21:11 PST
Note You need to log in before you can comment on or make changes to this bug.