[LBSE] Fix marker-element-added.html https://bugs.webkit.org/show_bug.cgi?id=308640

Reviewed by Nikolas Zimmermann.

Registering SVG resources works when done during initial
render tree constructions, i.e. the SVG resource is defined before
or after its clients, because the pending resource logic can find the SVG
resource by id in the DOM tree.

When appending the SVG resource after initial render tree construction the
pending resource logic can't find the element to wait for as it is not
part of the DOM tree yet. So add logic to add the appropriate CSS
clients for the newly registered SVG resource based on the pending clients.

Besides above, also include a repaintAllClients when above situation
is encountered and fix a lookup issue where svgMarkerResourceFromStyle
did not strip the '#'.

* LayoutTests/platform/mac-tahoe-wk2-lbse-text/TestExpectations:
* Source/WebCore/rendering/ReferencedSVGResources.cpp:
(WebCore::ReferencedSVGResources::addReferencedSVGResourceIfNeeded):
* Source/WebCore/rendering/ReferencedSVGResources.h:
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::addReferencedSVGResourceIfNeeded):
* Source/WebCore/rendering/RenderElement.h:
* Source/WebCore/rendering/RenderLayerModelObject.cpp:
(WebCore::RenderLayerModelObject::svgMarkerResourceFromStyle const):
* Source/WebCore/rendering/svg/RenderSVGResourceContainer.cpp:
(WebCore::RenderSVGResourceContainer::registerResource):

Canonical link: https://commits.webkit.org/308449@main