Source/WebCore/rendering/svg/RenderSVGResourceContainer.cpp
@@ -21,6 +21,7 @@
 #include "config.h"
 #include "RenderSVGResourceContainer.h"
 
+#include "ContainerNodeInlines.h"
 #include "RenderLayer.h"
 #include "RenderElementInlines.h"
 #include "RenderObjectInlines.h"
@@ -99,12 +100,20 @@ void RenderSVGResourceContainer::registerResource()
     if (!treeScope->isIdOfPendingSVGResource(m_id))
         return;
 
+    bool needsRepaintAllClients = false;
     auto elements = copyToVectorOf<Ref<SVGElement>>(treeScope->removePendingSVGResource(m_id));
     for (auto& element : elements) {
         ASSERT(element->hasPendingResources());
+        if (CheckedPtr clientRenderer = element->renderer()) {
+            Ref svgElement = this->element();
+            needsRepaintAllClients |= clientRenderer->addReferencedSVGResourceIfNeeded(svgElement.get(), m_id);
+        }
         treeScope->clearHasPendingSVGResourcesIfPossible(element);
         notifyResourceChanged(element.get());
     }
+    // If we were appended after the render tree was created and we had pending clients then repaint them.
+    if (needsRepaintAllClients)
+        repaintAllClients();
 }
 
 void RenderSVGResourceContainer::repaintAllClients() const
